--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-        <div class="row">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Workout Tracker</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<div class="row">
           <button class="btn" id="importBtn">Import backup (JSON)</button>
           <input type="file" id="importJsonFile" accept="application/json" style="display:none"/>
         </div>
